--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gnu-efi"]
 	path = gnu-efi
 	url = https://git.code.sf.net/p/gnu-efi/code
+[submodule "OVMFbin"]
+	path = OVMFbin
+	url = https://github.com/Absurdponcho/OVMFbin.git
